updating bookinstance and genre

--- a/views/bookinstance_detail.pug
+++ b/views/bookinstance_detail.pug
@@ -21,5 +21,6 @@ block content
 
   hr 
   p
-    a(href=bookinstance._id + '/delete') Delete book 
-
+    a(href=bookinstance._id + '/delete') Delete book instance 
+  p 
+    a(href=bookinstance._id + '/update') Update book instance
